# wingbox-py

./: .gitignore  analysis.ipynb  entry.py  out.json  out.txt  plan_b.ipynb  points.npy  pyproject.toml  run  solve.py  wingbox.json
julia/: entry.jl  run_julia  solve.jl
tests/: test_geometry.py
wingbox_py/: geometry.py  sections.py
