[tool.poetry]
name = "wingbox-py"
version = "0.1.0"
description = ""
authors = ["Isaac Spencer <22ispencer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
numpy = "~2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
